필요없는거 정리